--- a/src/app/components/gastos/gastos.component.css
+++ b/src/app/components/gastos/gastos.component.css
@@ -6,38 +6,134 @@
 
 .titulo-prin {
     text-transform: uppercase;
-    margin: 10px;
+    margin-top: 0px;
+    margin-left: 15px;
+    padding-top: 10px;
 }
 
-.btn-stock {
-    margin-left: 10px;
+.btn-gasto {
     width: 150px;
-    height: 40px;
-    font-size: 15px;
+    height: 35px;
+    margin-left: 15px;
+    font-size: 13px;
     text-transform: uppercase;
 }
+
+.icono-btn {
+    font-size: 12px;
+    margin-right: 6px;
+}
+
+
+/* estilos dialogo agregar  */
+
+.form-row label {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.titulo-h3 {
+    width: 100%;
+    height: 40px;
+    margin-bottom: -20px;
+}
+
+.titulo-h3 i {
+    margin-right: 6px;
+}
+
+.identificador-detalle {
+    width: 30px;
+}
+
+
+/* fin estilos dialogo agregar  */
 
 
 /* estilos tabla */
 
-.table-service {
+.card {
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    margin-bottom: 10px;
 }
 
 .icono-table {
     width: 30px;
     height: 30px;
+    margin-right: 16px;
     text-align: center;
     line-height: 30px;
-    margin-right: 10px;
     font-size: 20px;
     border-radius: 3px;
+}
+
+.identificador {
+    width: 70px;
+}
+
+.td-iconos {
+    align-items: left;
+    justify-content: space-between;
 }
 
 
 /* fin estilos tabla */
 
-p {
-    margin: 10px;
+@media screen and (max-width: 800px) and (min-width:180px) {
+    p-table {
+        width: 100%;
+        font-size: .9em;
+    }
+    p-table tr {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid grey;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    p-table td[data-titulo] {
+        display: flex;
+    }
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
+        width: 100px;
+        color: silver;
+        font-weight: bold;
+    }
+    p-table .header {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 400px) and (min-width:180px) {
+    p-table {
+        width: 100%;
+        font-size: .9em;
+    }
+    p-table tr {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid grey;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    p-table td[data-titulo] {
+        display: flex;
+        font-size: .8em;
+    }
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
+        width: 100px;
+        color: silver;
+        font-size: .7em;
+        font-weight: bold;
+    }
+    p-table .header {
+        display: none;
+    }
 }
