--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="contenedor">
-    <nav class="navbar navbar-primary bg-primary clase-navbar ">
+    <nav class="navbar navbar-light  clase-navbar ">
         <div class="container-fluid">
             <div class="btn-menu div-menu">
                 <div class="label-menu">
@@ -82,9 +82,9 @@
             <div class=" formulario">
                 <form class="form-inline div-form">
                     <input class="form-control mr-sm-2 form" type="search" placeholder="Buscar..." aria-label="buscar...">
-                    <button class="btn btn-primary boton" type="button">
-                        <i class="pi pi-search icono-buscar "></i>
-                    </button>
+                    <small class="boton">
+                      <i class="pi pi-search icono-buscar "></i>
+                    </small>
                 </form>
             </div>
             <div class=" login">
