--- a/src/app/components/almacen/almacen.component.html
+++ b/src/app/components/almacen/almacen.component.html
@@ -2,49 +2,131 @@
 
     <div>
         <h2 class="titulo-prin">
-            <span>Estock en Almacén</span>
+            stock en almacén
         </h2>
     </div>
-    <div class="table-service">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Descripción</th>
-                    <th scope="col">Peso</th>
-                    <th scope="col">Tipo</th>
-                    <th scope="col">Cantidad</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>08/08/2021</td>
-                    <td>extintor</td>
-                    <td>5L</td>
-                    <td>ABC</td>
-                    <td>50</td>
-                    <td>
-                        <i class="pi pi-list btn-outline-primary icono-table"></i>
-                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
-                    </td>
-
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>07/08/2021</td>
-                    <td>extintor</td>
-                    <td>10L</td>
-                    <td>solkaflan</td>
-                    <td>20</td>
-                    <td>
-                        <i class="pi pi-list btn-outline-primary icono-table"></i>
-                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
-                    </td>
-                </tr>
-
-            </tbody>
-        </table>
+    <div class="btn">
+        <button (click)="showPositionDialog('center')" type="button" class="btn btn-primary btn-almacen">
+  <i class="pi pi-plus icono-btn"></i>Agregar producto</button>
     </div>
-</div>
+
+    <div class="card">
+        <p-table [(value)]="paises" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+            <ng-template pTemplate="header">
+                <tr class="header">
+                    <th class="identificador"> # </th>
+                    <th> Fecha </th>
+                    <th> Descripción </th>
+                    <th> Peso </th>
+                    <th> Tipo </th>
+                    <th> Cantidad </th>
+                    <th></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let paises>
+                <tr>
+                    <td data-titulo="#"> 1</td>
+                    <td data-titulo="Fecha"> 2</td>
+                    <td data-titulo="Descripción"> 3</td>
+                    <td data-titulo="Peso"> 6</td>
+                    <td data-titulo="Tipo"> 7</td>
+                    <td data-titulo="Cantidad"> 7</td>
+                    <td class="td-iconos">
+                        <i (click)="editarStock('center')" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+
+    <!-- dialogos -->
+    <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+        <ng-template pTemplate="header">
+            <h3 class="titulo-h3">
+                <i class="pi pi-list "></i> AGREGAR PRODUCTO
+            </h3>
+        </ng-template>
+        <div class="form">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="fecha" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fecha">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="descripcion" class="form-label">Descripción</label>
+                        <input type="text" class="form-control" id="descripcion">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="tipo" class="form-label">Tipo</label>
+                        <select id="tipo" class="form-control">
+                        <option selected>Seleccionar...</option>
+                        <option>...</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="peso" class="form-label">Peso</label>
+                        <select id="peso" class="form-control">
+                        <option selected>Seleccionar...</option>
+                        <option>...</option>
+                         </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="cantidad" class="form-label">Cantidad</label>
+                        <input type="number" class="form-control" id="cantidad">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <p-footer>
+            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
+        </p-footer>
+    </p-dialog>
+
+    <p-dialog [(visible)]="editStock" [position]="positionEdit" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+        <ng-template pTemplate="header">
+            <h3 class="titulo-h3">
+                <i class="pi pi-pencil "></i> EDITAR PRODUCTO
+            </h3>
+        </ng-template>
+        <div class="form">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="fecha" class="form-label">Fecha</label>
+                        <input type="date" class="form-control" id="fecha">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="descripcion" class="form-label">Descripción</label>
+                        <input type="text" class="form-control" id="descripcion">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="tipo" class="form-label">Tipo</label>
+                        <select id="tipo" class="form-control">
+                    <option selected>Seleccionar...</option>
+                    <option>...</option>
+                    </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="peso" class="form-label">Peso</label>
+                        <select id="peso" class="form-control">
+                    <option selected>Seleccionar...</option>
+                    <option>...</option>
+                     </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="cantidad" class="form-label">Cantidad</label>
+                        <input type="number" class="form-control" id="cantidad">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <p-footer>
+            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
+        </p-footer>
+    </p-dialog>
