--- a/src/app/components/empleados/empleados.component.html
+++ b/src/app/components/empleados/empleados.component.html
@@ -2,51 +2,129 @@
 
     <div>
         <h2 class="titulo-prin">
-            <span>Lista de empleados</span>
+            Lista de empleados
         </h2>
     </div>
     <div class="btn">
-        <button type="button" class="btn btn-primary btn-stock">Agregar empleado</button>
+        <button (click)="showPositionDialog('center')" type="button" class="btn btn-primary btn-emple">
+        <i class="pi pi-user-plus icono-btn"></i>Agregar empleado</button>
     </div>
-    <div class="table-service">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col"> # </th>
-                    <th scope="col"> Nombre </th>
-                    <th scope="col"> Apellido </th>
-                    <th scope="col"> Dirección </th>
-                    <th scope="col"> Teléfono </th>
-                    <th scope="col"> Email </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"> 1 </th>
-                    <td> Fabian </td>
-                    <td> Garcia </td>
-                    <td> Clle 14 24 A </td>
-                    <td> 830 4578 </td>
-                    <td> fabian@gmail.com </td>
-                    <td>
-                        <i class="pi pi-list btn-outline-primary icono-table"></i>
-                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row"> 2 </th>
-                    <td> Jose </td>
-                    <td> Garcia </td>
-                    <td> Clle 14 24 A </td>
-                    <td> 830 4578 </td>
-                    <td> fabian@gmail.com </td>
-                    <td>
-                        <i class="pi pi-list btn-outline-primary icono-table"></i>
-                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
-                    </td>
-                </tr>
 
-            </tbody>
-        </table>
+    <div class="card">
+        <p-table [(value)]="paises" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+            <ng-template pTemplate="header">
+                <tr class="header">
+                    <th class="identificador"> # </th>
+                    <th> Nombre </th>
+                    <th> Apellido </th>
+                    <th> Dirección </th>
+                    <th> Teléfono </th>
+                    <th> Email </th>
+                    <th></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let paises>
+                <tr>
+                    <td data-titulo="#"> 1</td>
+                    <td data-titulo="Nombre"> 2</td>
+                    <td data-titulo="Apellido"> 3</td>
+                    <td data-titulo="Dirección"> 6</td>
+                    <td data-titulo="Teléfono"> 7</td>
+                    <td data-titulo="Email"> 8</td>
+                    <td class="td-iconos">
+                        <i (click)="editarEmployee('center')" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
     </div>
-</div>
+
+    <!-- dialogos -->
+    <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+        <ng-template pTemplate="header">
+            <h3 class="titulo-h3">
+                <i class="pi pi-user-plus "></i> AGREGAR EMPLEADO
+            </h3>
+        </ng-template>
+        <div class="form">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre">
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="apellido" class="form-label">Apellido</label>
+                        <input type="text" class="form-control" id="apellido">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="telefono" class="form-label">Teléfono</label>
+                        <input type="number" class="form-control" id="telefono">
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="direccion" class="form-label">Dirección</label>
+                        <input type="text" class="form-control" id="direccion">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <p-footer>
+            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
+        </p-footer>
+    </p-dialog>
+
+    <p-dialog [(visible)]="editarEmpleado" [position]="positionEdit" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+        <ng-template pTemplate="header">
+            <h3 class="titulo-h3">
+                <i class="pi pi-user-edit "></i> EDITAR EMPLEADO
+            </h3>
+        </ng-template>
+        <div class="form">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="nombre1" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre1">
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="apellido1" class="form-label">Apellido</label>
+                        <input type="text" class="form-control" id="apellido1">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="telefono1" class="form-label">Teléfono</label>
+                        <input type="number" class="form-control" id="telefono1">
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="direccion1" class="form-label">Dirección</label>
+                        <input type="text" class="form-control" id="direccion1">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <label for="email1" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email1">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <p-footer>
+            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
+        </p-footer>
+    </p-dialog>
