--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -23,6 +23,7 @@ hr {
 }
 
 .clase-navbar {
+    background-color: #0573d3;
     height: 52px;
     width: 100%;
     display: flex;
@@ -156,7 +157,7 @@ fin estilos menu lateral */
 }
 
 .div-menu .label-menu:hover {
-    background-color: #1f6eff;
+    background-color: #2680cf;
     color: #ffffff;
     border-radius: 50px;
 }
@@ -186,7 +187,7 @@ fin estilos menu lateral */
 }
 
 .login .div-login:hover {
-    background-color: #1f6eff;
+    background-color: #2680cf;
     color: #ffffff;
     border-radius: 50px;
 }
@@ -210,12 +211,17 @@ fin estilos menu lateral */
 }
 
 .formulario .div-form .boton {
+    background-color: #0573d3;
     width: 45px;
     height: 45px;
     line-height: 52px;
-    border-radius: 50px;
     text-align: center;
     justify-content: center;
+}
+
+.formulario .div-form .boton:hover {
+    background-color: #2680cf;
+    border-radius: 50px;
 }
 
 .formulario .div-form .boton .icono-buscar {
